plugins {
    id 'com.android.application'
    id 'eclipse'
}

android {
    namespace 'dev.zide.terminal'
    compileSdk 35
    buildToolsVersion '35.0.0'

    defaultConfig {
        applicationId 'dev.zide.terminal'
        minSdk 23
        // The Android terminal product intentionally uses the Termux-compatible
        // execution posture until the repo proves a modern-target userland
        // model that can run app-private Bash/nvim-class tools honestly.
        targetSdk 28
        versionCode 1
        versionName '0.1'
    }

    buildTypes {
        debug {
            minifyEnabled false
            signingConfig signingConfigs.debug
        }
        profile {
            initWith release
            debuggable true
            signingConfig signingConfigs.debug
            matchingFallbacks = ['release']
        }
        release {
            minifyEnabled false
            signingConfig signingConfigs.debug
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    sourceSets {
        main {
            assets.srcDirs += ['../../../assets/fonts']
        }
    }
}

// Buildship/JDTLS does not infer Android app Java roots reliably on its own.
// Keep the source root declaration in Gradle so local Java tooling can import
// the app module without checked-in Eclipse metadata.
eclipse {
    classpath {
        defaultOutputDir = file('bin/default')
        file {
            whenMerged { classpath ->
                def declaredSourceDirs = [
                    'src/main/java',
                    'src/debug/java',
                    'src/release/java',
                    'src/test/java',
                    'src/testDebug/java',
                    'src/testRelease/java',
                    'src/androidTest/java',
                    'src/androidTestDebug/java',
                    'src/androidTestRelease/java',
                ]
                def existingSourceDirs = classpath.entries
                        .findAll { it.kind == 'src' }
                        .collect { it.path } as Set
                declaredSourceDirs.each { dir ->
                    if (!existingSourceDirs.contains(dir)) {
                        classpath.entries.add(new org.gradle.plugins.ide.eclipse.model.SourceFolder(dir, null))
                    }
                }
                def localProperties = new Properties()
                def localPropertiesFile = rootProject.file('local.properties')
                if (localPropertiesFile.exists()) {
                    localPropertiesFile.withInputStream { stream ->
                        localProperties.load(stream)
                    }
                }
                def sdkRoot = [
                    localProperties.getProperty('sdk.dir'),
                    System.getenv('ANDROID_SDK_ROOT'),
                    System.getenv('ANDROID_HOME'),
                    "${System.properties['user.home']}/.local/share/zide-android-sdk",
                ].find { candidate -> candidate && file(candidate).isDirectory() }
                def androidJarPath = null
                if (sdkRoot) {
                    def candidate = file("${sdkRoot}/platforms/android-${android.compileSdk}/android.jar")
                    if (candidate.isFile()) {
                        androidJarPath = candidate.absolutePath
                    }
                }
                def debugRJarPath = null
                def debugRJar = file(
                        "${buildDir}/intermediates/compile_and_runtime_not_namespaced_r_class_jar/debug/processDebugResources/R.jar"
                )
                if (debugRJar.isFile()) {
                    debugRJarPath = debugRJar.absolutePath
                }
                def existingLibraries = classpath.entries
                        .findAll { it.kind == 'lib' }
                        .collect { it.path } as Set
                if (androidJarPath && !existingLibraries.contains(androidJarPath)) {
                    classpath.entries.add(
                            new org.gradle.plugins.ide.eclipse.model.Library(
                                    classpath.fileReference(androidJarPath)
                            )
                    )
                }
                if (debugRJarPath && !existingLibraries.contains(debugRJarPath)) {
                    classpath.entries.add(
                            new org.gradle.plugins.ide.eclipse.model.Library(
                                    classpath.fileReference(debugRJarPath)
                            )
                    )
                }
            }
        }
    }
}
